--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "fs": "0.0.1-security",
     "nuxt": "^2.14.0",
     "tesseract.js": "^2.1.1"
   },
